Fix search overlay on IE.

--- a/themes/custom/mat/sass/components/_forms.scss
+++ b/themes/custom/mat/sass/components/_forms.scss
@@ -5,37 +5,6 @@
 //
 // ========================================
 
-label {
-
-}
-
-input[type=text],
-input[type=email],
-input[type=password] {
-
-  &:focus {
-
-  }
-}
-
-textarea {
-
-  &:focus {
-
-  }
-}
-
-input[type=checkbox] {
-
-}
-
-input[type=radio] {
-
-}
-
-input[type=file] {
-
-  &:focus {
-
-  }
+input::-ms-clear {
+  display: none;
 }
